kubernetes/turing/storage/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: storage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
spec:
  ingressClassName: cilium
  rules:
    - host: &host "longhorn.turing.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - *host
